Removal of incompatible OpenJDK settings